@@ -870,7 +870,7 @@ def data(readonly=False):
              "Mode to use for hints."),
 
             ('chars',
-             SettingValue(typ.String(minlen=2, completions=[
+             SettingValue(typ.UniqueCharString(minlen=2, completions=[
                  ('asdfghjkl', "Home row"),
                  ('dhtnaoeu', "Home row (Dvorak)"),
                  ('abcdefghijklmnopqrstuvwxyz', "All letters"),
